Bug 2465 - Toshiba acpi driver didn't use acpi-disabled
Summary: Toshiba acpi driver didn't use acpi-disabled
Status: CLOSED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Platform (show other bugs)
Hardware: i386 Linux
: P2 low
Assignee: Len Brown
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2004-04-07 00:19 UTC by Shaohua
Modified: 2010-10-08 18:16 UTC (History)
1 user (show)

See Also:
Kernel Version: 2.6.5
Subsystem:
Regression: ---
Bisected commit-id:


Attachments
fix for it (631 bytes, patch)
2004-04-07 00:21 UTC, Shaohua
Details | Diff

Description Shaohua 2004-04-07 00:19:14 UTC
when acpi=off, toshiba acpi driver will generate garbage info.
Comment 1 Shaohua 2004-04-07 00:21:00 UTC
Created attachment 2532 [details]
fix for it

It seems we ignored toshiba_acpi driver when acpi=off.
Comment 2 Len Brown 2004-05-11 23:26:16 UTC
shipped in 2.6.6, and on top of 2.4.27-pre2 -- closing. 

Note You need to log in before you can comment on or make changes to this bug.