[ACPI] toshiba_acpi driver if acpi_disabled (David Shaohua Li) http://bugzilla.kernel.org/show_bug.cgi?id=2465